# xml-conformance-rs

./: .gitignore  Cargo.toml  LICENSE
.devcontainer/: Dockerfile  devcontainer.json
src/: main.rs
