[package]
name = "xml-conformance-rs"
version = "0.0.0"
edition = "2021"
license = "MIT"
description = "(In progress) Test various xml crates against the xml conformance tests see: https://www.w3.org/XML/Test/"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
inquire = "0.5.2"
reqwest = "0.11.12"
tempfile = "3.3.0"
tokio = { version = "1.21.2", features = ["full"]}
zip = "0.6.3"
quick-xml = { version = "0.26.0", features = ["serialize"] }
serde = { version = "1.0.147", features = ["derive"] }

